--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-requests
-gmssl
-aiohttp
+# 媒体解析插件依赖
+
+# 核心依赖
+aiohttp>=3.13.0          # 异步 HTTP 客户端
+gmssl>=3.2.1             # ABogus 算法所需（SM算法）
+
+# AstrBot 框架（由框架提供，无需单独安装）
+# astrbot>=3.4.28
+
+# 可选依赖（用于开发和测试）
+# pytest>=7.0.0          # 单元测试
+# pytest-asyncio>=0.21.0 # 异步测试支持
+# black>=23.0.0          # 代码格式化
+# mypy>=1.0.0            # 类型检查
